--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="icon" href="title-icon.ico">
   </head>
   <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images\cloud.png" alt="">
+      <h1>Shashikant Prasad</h1>
+      <p>I'm a web developer</p>
+      <img class="bottom-cloud" src="images\cloud.png" alt="">
+      <img src="images\mountain.png" alt="">
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
 
   </body>
 </html>
