--- a/index.html
+++ b/index.html
@@ -10,19 +10,51 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
+
     <div class="top-container">
       <img class="top-cloud" src="images\cloud.png" alt="">
-      <h1>Shashikant Prasad</h1>
-      <p>I'm a web developer</p>
+      <h1>I'm Shashi</h1>
+      <h2>a web developer</h2>
       <img class="bottom-cloud" src="images\cloud.png" alt="">
       <img src="images\mountain.png" alt="">
     </div>
+
     <div class="middle-container">
-
+      <div class="profile">
+        <img class="profile-image" src="images/shashi-circular.png" alt="">
+        <h2>Hello.</h2>
+        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="computer-image" src="images/computer.png" alt="">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="art-image" src="images/art.png" alt="">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:shashikpd1@gmail.com">CONTACT ME</a>
+      </div>
     </div>
+
     <div class="bottom-container">
-
+      <a class="footer-link" href="https://www.linkedin.com/in/shashikpd/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/Shashi_KPD">Twitter</a>
+      <a class="footer-link" href="https://github.com/ShashiKPD">Github</a>
+      <p>© 2022 Shashikant Prasad.</p>
     </div>
+
 
   </body>
 </html>
