contact button and footer added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:shashikpd1@gmail.com">CONTACT ME</a>
+        <a class="contact-btn" href="mailto:shashikpd1@gmail.com" target="_blank">CONTACT ME</a>
       </div>
     </div>
 
@@ -52,9 +52,8 @@
       <a class="footer-link" href="https://www.linkedin.com/in/shashikpd/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/Shashi_KPD">Twitter</a>
       <a class="footer-link" href="https://github.com/ShashiKPD">Github</a>
-      <p>© 2022 Shashikant Prasad.</p>
+      <p class="copyright">© 2022 Shashikant Prasad.</p>
     </div>
-
 
   </body>
 </html>
